<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_my_report" android:title="@string/action_my_report"
        android:orderInCategory="98" app:showAsAction="never" />

    <item android:id="@+id/action_vehicle_speed" android:title="@string/action_vehicle_speed"
        android:orderInCategory="98" app:showAsAction="never" />

    <item android:id="@+id/action_vehicle_plate" android:title="@string/action_vehicle_plate"
        android:orderInCategory="99" app:showAsAction="never" />

    <item android:id="@+id/action_my_profile" android:title="@string/action_my_profile"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="101" app:showAsAction="never" />

    <item android:id="@+id/action_logout" android:title="@string/action_logout"
        android:orderInCategory="102" app:showAsAction="never" />
</menu>